tests/ui/pipeline_builder_not_public_dsl.rs
use viprs::adapters::pipeline::PipelineBuilder;

fn main() {
    let _ = std::any::TypeId::of::<PipelineBuilder>();
}
